add basic UI with buttons and display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
   <title>Calculator</title>
 </head>
 <body>
-  <div></div>
+  <div class="calculator-body">
+    <div class="display-block">
+        <div class="display-screen">Display</div>
+    </div>
+    <div class="button-block">
+        <div class="number-grid">
+            <div class="number-square">1</div>
+            <div class="number-square">2</div>
+            <div class="number-square">3</div>
+            <div class="number-square">4</div>
+            <div class="number-square">5</div>
+            <div class="number-square">6</div>
+            <div class="number-square">7</div>
+            <div class="number-square">8</div>
+            <div class="number-square">9</div>
+            <div class="number-square">-</div>
+            <div class="number-square">0</div>
+            <div class="number-square">-</div>
+        </div>
+        <div class="operator-buttons">
+            <div class="operator-btn" id="addBtn">+</div>
+            <div class="operator-btn" id="subtractBtn">-</div>
+            <div class="operator-btn" id="multiplyBtn">*</div>
+            <div class="operator-btn" id="divideBtn">/</div>
+            <div class="operator-btn" id="clearBtn">CLEAR</div>
+        </div>
+    </div>
+
+  </div>
 
 </body>
 </html>
