--- a/index.html
+++ b/index.html
@@ -11,29 +11,29 @@
 <body>
   <div class="calculator-body">
     <div class="display-block">
-        <div class="display-screen">Display</div>
+        <div id="display-screen">Display</div>
     </div>
     <div class="button-block">
         <div class="number-grid">
-            <div class="number-square">1</div>
-            <div class="number-square">2</div>
-            <div class="number-square">3</div>
-            <div class="number-square">4</div>
-            <div class="number-square">5</div>
-            <div class="number-square">6</div>
-            <div class="number-square">7</div>
-            <div class="number-square">8</div>
-            <div class="number-square">9</div>
-            <div class="number-square">-</div>
-            <div class="number-square">0</div>
-            <div class="number-square">-</div>
+            <button class="number-square" id="btn1">1</button>
+            <button class="number-square" id="btn2">2</button>
+            <button class="number-square" id="btn3">3</button>
+            <button class="number-square" id="btn4">4</button>
+            <button class="number-square" id="btn5">5</button>
+            <button class="number-square" id="btn6">6</button>
+            <button class="number-square" id="btn7">7</button>
+            <button class="number-square" id="btn8">8</button>
+            <button class="number-square" id="btn9">9</button>
+            <button class="number-square" id="backspaceBtn">X?</button>
+            <button class="number-square" id="btn0">0</button>
+            <button class="number-square" id="equalBtn">=</button>
         </div>
         <div class="operator-buttons">
-            <div class="operator-btn" id="addBtn">+</div>
-            <div class="operator-btn" id="subtractBtn">-</div>
-            <div class="operator-btn" id="multiplyBtn">*</div>
-            <div class="operator-btn" id="divideBtn">/</div>
-            <div class="operator-btn" id="clearBtn">CLEAR</div>
+            <button class="operator-btn" id="addBtn">+</button>
+            <button class="operator-btn" id="subtractBtn">-</button>
+            <button class="operator-btn" id="multiplyBtn">*</button>
+            <button class="operator-btn" id="divideBtn">/</button>
+            <button class="operator-btn" id="clearBtn">CLEAR</button>
         </div>
     </div>
 
