hide text overflow in display

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="calculator-body">
     <div class="display-block">
-        <div id="display-screen">Display</div>
+        <div id="display-screen"></div>
     </div>
     <div class="button-block">
         <div class="number-grid">
