add backspace icon, and small cleanup of commented code

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
             <button class="number-square" id="btn7">7</button>
             <button class="number-square" id="btn8">8</button>
             <button class="number-square" id="btn9">9</button>
-            <button class="number-square" id="backspaceBtn">X?</button>
+            <button class="number-square" id="backspaceBtn">
+              <img src="./img/backspace-icon.png" alt=”backspace-icon” id="icon-img">
+            </button>
             <button class="number-square" id="btn0">0</button>
             <button class="number-square" id="equalBtn">=</button>
         </div>
         <div class="operator-buttons">
             <button class="operator-btn" id="addBtn">+</button>
             <button class="operator-btn" id="subtractBtn">-</button>
-            <button class="operator-btn" id="multiplyBtn">*</button>
+            <button class="operator-btn" id="multiplyBtn">x</button>
             <button class="operator-btn" id="divideBtn">/</button>
             <button class="operator-btn" id="clearBtn">CLEAR</button>
         </div>
